<resources>
    <string name="app_name">Forsta</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="GcmBroadcastReceiver_retrieving_a_message">Retrieving a message...</string>
    <string name="NotificationChannel_messages">Messages</string>
    <string name="NotificationChannel_messages_low">Messages: Low importance</string>
    <string name="NotificationChannel_messages_min">Messages: Minimum importance</string>
    <string name="NotificationChannel_calls">Calls</string>
    <string name="NotificationChannel_failures">Failures</string>
    <string name="NotificationChannel_backups">Backups</string>
    <string name="NotificationChannel_locked_status">Locked status</string>
    <string name="NotificationChannel_app_updates">App updates</string>
    <string name="NotificationChannel_group_messages">Messages</string>
    <string name="NotificationChannel_other">Other</string>
    <string name="NotificationChannel_missing_display_name">Unknown</string>
    <string name="MessageRetrievalService_forsta">Forsta Message Retrieval Service</string>
    <string name="MessageRetrievalService_background_connection_enabled">Background connection enabled</string>
    <string name="forsta_login_title">Login to Forsta</string>
    <string name="forsta_login_title_join">Join Forsta</string>
    <string name="forsta_login_account_firstname_label">First Name</string>
    <string name="forsta_login_account_fullname_label">Full Name</string>
    <string name="forsta_login_account_username_label">Username</string>
    <string name="forsta_login_account_password_label">Password</string>
    <string name="forsta_login_account_password_verify_label">Verify Password</string>
    <string name="forsta_login_account_lastname_label">Last Name</string>
    <string name="forsta_login_account_email_label">Email</string>
    <string name="forsta_login_account_phone_label">Phone</string>
    <string name="forsta_login_username_label">Username and Organization (joe.louis:example.com</string>
    <string name="forsta_login_password_label">Password</string>
    <string name="forsta_login_org_label">Organization</string>
    <string name="forsta_login_security_code_label">You will recieve a security token via sms shortly. Enter the 6 digit code below.</string>
    <string name="forsta_login_password_instructions_label">Please enter your password.</string>
    <string name="forsta_login_totp_instructions_label">Enter your 6-digit authenticator code.</string>
    <string name="forsta_login_tryagain_instructions_label">If you do not receive an sms or you are having trouble with your password, click below to try to login again.</string>
    <string name="forsta_login_tryagain_link_label">Try Login Again</string>
    <string name="forsta_login_forgotpassword_instructions_label">Forgot your password?</string>
    <string name="forsta_login_forgotpassword_link_label">Reset Password</string>
    <string name="forsta_login_send_link_button">Login</string>
    <string name="forsta_login_create_account_button">Create Account</string>
    <string name="forsta_login_account_submit_button">Submit</string>
    <string name="forsta_login_account_cancel_button">Cancel</string>
    <string name="forsta_login_login_button">Submit</string>
    <string name="forsta_login_verify_token_button">Verify Token</string>
    <string name="forsta_login_tryagain_button">Try Again</string>
    <string name="forsta_login_provision_error_title">Unable to communicate with any other registered devices.</string>
    <string name="forsta_login_provision_error">If you have another registered phone or web app, please make sure one of them is running and try again. If you choose to continue, other phone devices will no longer be registered.</string>
    <string name="forsta_login_provision_continue">Continue Registration</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">1 message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Forsta and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Forsta messages...</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Forsta messages?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Forsta messages by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Forsta your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Passphrase %1$s, Screen security %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <string name="Job_working_in_the_background">Working in the background...</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_document_snippet">(document)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentTypeSelectorAdapter_camera">Camera</string>
    <string name="AttachmentTypeSelectorAdapter_picture">Picture</string>
    <string name="AttachmentTypeSelectorAdapter_video">Video</string>
    <string name="AttachmentTypeSelectorAdapter_audio">Audio</string>
    <string name="AttachmentTypeSelectorAdapter_document">Document</string>
    <string name="AttachmentTypeSelectorAdapter_contact">Contact info</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="audio_view__play_accessibility_description">Play</string>
    <string name="audio_view__pause_accessibility_description">Pause</string>
    <string name="audio_view__download_accessibility_description">Download</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="ConfirmIdentityDialog_the_signature_on_this_key_exchange_is_different">The
        safety numbers for %1$s have changed. This could either mean that someone is trying to
        intercept your communication, or that %2$s simply re-installed Forsta.
    </string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_this_contact">You may wish to verify
        safety numbers for this contact.
    </string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_signal_call_s">Forsta Call %s</string>
    <string name="ConversationItem_message_size_d_kb">Message size: %d KB</string>
    <string name="ConversationItem_expires_s">Expires: %s</string>
    <string name="ConversationItem_error_not_delivered">Not delivered</string>
    <string name="ConversationItem_view_secure_media_question">View secure media?</string>
    <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_external_viewer_warning">This media has been stored in an encrypted database. Unfortunately, to view it with an external content viewer currently requires the data to be temporarily decrypted and written to storage. Are you sure that you would like to do this?</string>
    <string name="ConversationItem_error_received_stale_key_exchange_message">Error, received stale key exchange message.</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationActivity_add_attachment">Add attachment</string>
    <string name="conversation_activity__send">Send</string>
    <string name="conversation_activity__emoji_toggle_description">Toggle emoji keyboard</string>
    <string name="conversation_activity__quick_attachment_drawer_toggle_description">Toggle attachment drawer</string>
    <string name="conversation_input_panel__slide_to_cancel">SLIDE TO CANCEL</string>
    <string name="thread_preferences_pin_conversation">Pinned</string>
    <string name="thread_preferences__mute_conversation">Mute conversation</string>
    <string name="thread_preferences__disable_notifications_for_this_conversation">Disable notifications for this conversation</string>
    <string name="thread_preferences__pin_for_this_conversation">Pin this conversation</string>
    <string name="thread_preferences__color">Color</string>
    <string name="thread_preferences__color_for_this_conversation">Color for this conversation</string>
    <string name="arrays__import_export">Import / export</string>
    <string name="text_secure_normal__menu_new_group">New group</string>
    <string name="text_secure_normal__menu_settings">Settings</string>
    <string name="text_secure_normal__menu_linked_devices">Linked Devices</string>
    <string name="text_secure_normal__menu_clear_passphrase">Lock</string>
    <string name="text_secure_normal__mark_all_as_read">Mark all read</string>
    <string name="text_secure_normal__help">Help</string>
</resources>