<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Directory"
          android:id="@+id/menu_directory"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/text_secure_normal__menu_settings" />

    <item
        android:id="@+id/menu_linked_devices"
        android:title="@string/text_secure_normal__menu_linked_devices" />

    <item
        android:id="@+id/menu_new_group"
        android:title="@string/text_secure_normal__menu_new_group" />

    <item android:title="@string/text_secure_normal__menu_clear_passphrase"
          android:id="@+id/menu_clear_passphrase" />

    <item android:title="@string/text_secure_normal__mark_all_as_read"
          android:id="@+id/menu_mark_all_read" />

    <!--<item android:title="@string/text_secure_normal__invite_friends"-->
          <!--android:id="@+id/menu_invite" />-->

    <item android:title="@string/arrays__import_export"
          android:id="@+id/menu_import_export" />

    <item android:title="@string/text_secure_normal__help"
          android:id="@+id/menu_help"/>

</menu>
