<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.forsta.securesms.components.SwitchPreferenceCompat
        android:key="pref_key_thread_pinned"
        android:title="@string/thread_preferences_pin_conversation"
        android:summary="@string/thread_preferences__pin_for_this_conversation"
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:persistent="false" />
    <io.forsta.securesms.components.SwitchPreferenceCompat
        android:key="pref_key_thread_mute"
        android:title="@string/thread_preferences__mute_conversation"
        android:summary="@string/thread_preferences__disable_notifications_for_this_conversation"
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:persistent="false" />

    <!--<io.forsta.securesms.preferences.AdvancedRingtonePreference-->
        <!--android:dependency="pref_key_thread_mute"-->
        <!--android:key="pref_key_thread_ringtone"-->
        <!--android:title="@string/thread_preferences__notification_sound"-->
        <!--android:ringtoneType="notification"-->
        <!--android:showSilent="false"-->
        <!--android:showDefault="true"-->
        <!--android:persistent="false"/>-->

    <!--<ListPreference android:dependency="pref_key_thread_mute"-->
                    <!--android:key="pref_key_thread_vibrate"-->
                    <!--android:title="@string/thread_preferences__vibrate"-->
                    <!--android:entries="@array/recipient_vibrate_entries"-->
                    <!--android:entryValues="@array/recipient_vibrate_values"-->
                    <!--android:defaultValue="0"-->
                    <!--android:persistent="false"/>-->

    <io.forsta.securesms.preferences.ColorPreference
        android:key="pref_key_thread_color"
        android:title="@string/thread_preferences__color"
        android:summary="@string/thread_preferences__color_for_this_conversation"
        android:defaultValue="@android:color/black"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:persistent="false"
        app:numColumns="5" />

    <!--<Preference android:key="pref_key_thread_block"-->
                <!--android:title="@string/thread_preferences__block"-->
                <!--android:persistent="false"/>-->


</PreferenceScreen>