<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.forsta.ccsm.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/forsta_login_container"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forsta_login_title"
        android:text="@string/forsta_login_title"
        android:layout_marginBottom="30dp"
        style="@style/TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:id="@+id/forsta_login_send_link_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forsta_login_username_label" />

        <EditText
            android:id="@+id/forsta_login_username_get_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forsta_login_org_label" />

        <EditText
            android:id="@+id/forsta_login_org_get_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/forsta_get_token_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/forsta_button_pop4"
            android:text="@string/forsta_login_send_link_button"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="- OR -" />

        <Button
            android:id="@+id/forsta_create_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/forsta_button_pop4"
            android:text="@string/forsta_login_create_domain_button"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forsta_login_submit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/forsta_login_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forsta_login_username_label" />

            <EditText
                android:id="@+id/forsta_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forsta_login_password_label" />

            <EditText
                android:id="@+id/forsta_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forsta_login_verify_token_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/forsta_login_security_code_label" />

            <EditText
                android:id="@+id/forsta_login_security_code"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="5dp"
                android:digits="1234567890"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="phone"
                android:letterSpacing="0.25"
                android:maxLength="6"
                android:singleLine="true"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forsta_login_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/forsta_button_pop4"
                android:text="@string/forsta_login_login_button"
                android:textColor="@color/white"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="If you do not receive an sms, click below to try again." />

            <TextView
                android:id="@+id/forsta_login_tryagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Try Login Again"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/login_progress_bar"
        android:visibility="gone"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:visibility="gone">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Having trouble with the login?"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Click to try Username and Password."
        android:id="@+id/forsta_login_standard_login"
        android:textColor="@color/blue_100"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
</LinearLayout>

</RelativeLayout>
